# QtCMP

./: .gitignore  Node.h  QtCMP.pro  QtCMP.pro.user.6b2644b  QtCMP.pro.user.b139267  circularLists.cpp  circularlist.cpp  circularlist.h  config.ini  doublylinkedlist.cpp  doublylinkedlist.h  jsonhandler.cpp  jsonhandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pagedarray.cpp  pagedarray.h  principallist.cpp  principallist.h  server.cpp  serverconnection.cpp  serverconnection.h
Cliente/: Cargo.toml  config.ini
Cliente/src/: connection.rs  main.rs  polling.rs
