[package]
name = "Cliente2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ini = "1.3.0"
fltk = "^1.4.26"
log = "0.4.21"
env_logger = "0.11.3"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }

